# PyCon2024

./: .gitignore  .pre-commit-config.yaml  .rusty-hook.toml  Cargo.toml  README.md  Readme.md  index.html  pyproject.toml  requirements.txt  taplo.toml
bindings/: Cargo.toml
bindings/src/: lib.rs
notebooks/: benchmarking.ipynb  data_generation.ipynb
python/docs/: conf.py  index.md
python/src/gaussian_mixtures/: __init__.py
python/tests/: test_gaussian_mixture.py
rust/: Cargo.toml
rust/benches/: benchmark.rs
rust/data/: covs.npy  data.npy  means.npy  responsibilities.npy  weights.npy
rust/src/: lib.rs
