[package]
name = "gaussian_mixtures"
version = "0.1.0"
edition = "2021"
description = "Tutorial session for PyCon/PyData Berlin 2024"
authors = ["Stefan Ulbrich"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { workspace = true, features = ["rayon", "approx"] }
itertools = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
ndarray-npy.workspace = true
plotters.workspace = true
tracing.workspace = true

[[bench]]
harness = false
name = "benchmark"
